--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,12 @@
+<%= flash[:notice] %>
+<%= flash[:alert] %>
+
 <h1>Welcome to the Deep Thoughts Blog</h1>
 
-
+<%= link_to "Add new post", new_post_path %>
 
 <% if @posts.any? %>
+  <h3>All posts:</h3>
   <ul>
     <% @posts.each do |post| %>
       <li><%= post.title %></li>
