Add css bootstrap cerulean as well as styles.css.

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,5 +5,5 @@
   <%= f.text_field :title %>
   <%= f.label :entry %>
   <%= f.text_field :entry %>
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit", :class => "btn btn-success" %>
 <% end %>
