--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
-<%= flash[:notice] %>
-<%= flash[:alert] %>
+<span class="success"><%= flash[:notice] %></span>
+<span class="fail"><%= flash[:alert] %></span>
 
 <h1>Welcome to the Deep Thoughts Blog</h1>
 
-<%= link_to "Add new post", new_post_path %>
+<%= link_to "Add new post", new_post_path, :class => "btn btn-primary" %>
 
 <% if @posts.any? %>
   <h3>All posts:</h3>
