Add tests for and functionality for editing a post. Error though.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,4 +7,6 @@
   <%= @post.entry %>
 </p>
 
+<%= link_to "Edit", edit_post_path, :class => "btn btn-warning" %>
+
 <%= link_to "Back to Posts", posts_path, :class => "btn btn-default" %>
