--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,4 +9,6 @@
 
 <%= link_to "Edit", edit_post_path, :class => "btn btn-warning" %>
 
+<%= link_to "Delete post", post_path(@post), :data => { :confirm => "Are you sure you want to erase this thought from the physical world?", :method => "delete" }, :class => "btn btn-danger" %>
+
 <%= link_to "Back to Posts", posts_path, :class => "btn btn-default" %>
