Add passing tests of login process and a not working paperclip.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,8 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", :id => "Create user" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
