--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <span class="success"><%= flash[:notice] %></span>
     <span class="fail"><%= flash[:alert] %></span>
     <% if user_signed_in? %>
-      Hello <strong><%= current_user.username %>, you're looking nice today!</strong>.
+      Hello <strong><%= current_user.username %>, you're looking thoughtful today!</strong>.
       <%= link_to 'Edit profile', edit_user_registration_path %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
