--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,5 +5,6 @@
   <%= f.text_field :title %>
   <%= f.label :entry %>
   <%= f.text_field :entry %>
+  <%= f.file_field :photo %>
   <%= f.submit "Submit", :class => "btn btn-success" %>
 <% end %>
