--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Add new post", new_post_path, :class => "btn btn-primary" %>
 
 <% if @posts.any? %>
-  <h3>All posts:</h3>
+  <h3>Deep thoughts:</h3>
   <ul>
     <% @posts.each do |post| %>
       <li>
