--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,11 @@
 <%= render "layouts/errors", :object => @comment %>
 
 <%= form_for [@post, @comment] do |f| %>
-  <%= f.label :body %>
-  <%= f.text_field :body %>
+  <%= f.text_area :body, :rows => 5, :cols => "90" %>
+  <br>
   <%= f.submit "Comment" , :class => "btn btn-success" %>
 <% end %>
+
+<br>
+
+<%= link_to "Nevermind", :back, :class => "btn btn-primary" %>
