--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,9 +2,17 @@
 
 <%= form_for @post do |f| %>
   <%= f.label :title %>
+  <br>
   <%= f.text_field :title %>
+  <br>
   <%= f.label :entry %>
-  <%= f.text_field :entry %>
+  <br>
+  <%= f.text_area :entry, :rows => 10, :cols => "90" %>
   <%= f.file_field :photo %>
+  <br>
   <%= f.submit "Submit", :class => "btn btn-success" %>
 <% end %>
+
+<br>
+
+<%= link_to "Nevermind", root_path, :class => "btn btn-primary" %>
