Add AJAX functionality to adding and deleting comments on posts. Working on Edit.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,18 +11,13 @@
 
 <% if @post.comments.any? %>
   <h4>Comments:</h4>
-  <% @post.comments.each do |comment| %>
-    <ul>
-      <li><%= comment.body %>
-        <%= link_to "Alter", edit_post_comment_path(@post, comment), :class => "btn btn-xs btn-default" %>
-        <%= link_to "Erase", post_comment_path(@post, comment), :data => { :method => "delete" }, :class => "btn btn-xs btn-default" %>
-      </li>
-    </ul>
-  <% end %>
+  <div class="comments" id="comments">
+    <%= render @post.comments %>
+  </div>
 
 <% end %>
 
-<%= link_to "Leave a comment", new_post_comment_path(@post), :class => "btn btn-success" %>
+<%= link_to "Leave a comment", new_post_comment_path(@post), class: "btn btn-success", id: "new_comment_button", remote: true %>
 
 <br>
 <br>
