--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
-$('#new_comment').remove();
+$('#new_comment_form').remove();
 $('#new_comment_button').show();
 $('#comments').append('<%= j render(@comment) %>');
