Add edit and delete ajax functionality.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,10 @@ body {
   background-repeat: no-repeat;
 }
 
+.well {
+  background-color: hsla(0, 100%, 100%, 0.6)
+}
+
 .success {
   background-color: #DFF0D8;
   display: block;
