--- a/app/views/comments/edit.js.erb
+++ b/app/views/comments/edit.js.erb
@@ -1,1 +1,1 @@
-$('#new_comment_button').hide().after('<%= j render('form') %>');
+$('#new_comment_button').hide().after("<%= j render('form') %>");
