Add styling to devise buttons.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,6 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", :id => "Create user" %>
+    <%= f.submit "Sign up", class: "btn btn-primary", :id => "Create user" %>
   </div>
 <% end %>
